--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,12 +46,12 @@
       {{ settings.type_header_font | font_face: font_display: 'swap' }}
 
       :root {
-        --font-body-family: {{ "Motiva" }}, {{ settings.type_body_font.fallback_families }};
+        --font-body-family: {{ "Bussin" }}, {{ settings.type_body_font.fallback_families }};
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
 
-        --font-heading-family: {{ "Motiva" }}, {{ settings.type_header_font.fallback_families }};
+        --font-heading-family: {{ "Bussin" }}, {{ settings.type_header_font.fallback_families }};
         --font-heading-style: {{ settings.type_header_font.style }};
         --font-heading-weight: {{ 300 }};
 
@@ -194,8 +194,8 @@
       }
 
       @font-face {
-        font-family: "Motiva";
-        src: url({{"MotivaSansRegular.woff.ttf" | asset_url}}) format("woff");
+        font-family: "Bussin";
+        src: url({{"BussinSansRegular.woff.ttf" | asset_url}}) format("woff");
       }
 
     {% endstyle %}
