--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -358,7 +358,10 @@ a.product__text {
   border-color: transparent;
 }
 
-.product .price--sold-out .price__badge-sale {
+.product .price__badge-sale {
+  color: rgb(208, 240, 203) !important;
+  background: #65A708 !important;
+  border-color: rgba(208, 240, 203, 0.5);
   display: none;
 }
 
@@ -368,7 +371,8 @@ a.product__text {
   }
 
   .product__info-container .price--on-sale .price-item--regular {
-    font-size: 1.6rem;
+    color: #6189A8 !important;
+    font-size: 1.3rem;
   }
 
   .product__info-container > *:first-child {
