--- a/sections/specification-section.liquid
+++ b/sections/specification-section.liquid
@@ -181,25 +181,25 @@
                   </div>
                   <div class="flex-item">
                     <div class="aligner">
-                      {% if product.metafields.specs.wheel_diameter != nil %}
+                      {% if product.metafields.specs.rgb != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> RGB: </span>
                           <span class="specs-sheet-value"> {{ product.metafields.specs.rgb }} </span>
                         </div>
                       {% endif %}
-                      {% if product.metafields.specs.wheel_diameter != nil %}
+                      {% if product.metafields.specs.bt_speakers != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> Bluetooth Speakers: </span>
                           <span class="specs-sheet-value"> {{ product.metafields.specs.bt_speakers }} </span>
                         </div>
                       {% endif %}
-                      {% if product.metafields.specs.wheel_diameter != nil %}
+                      {% if product.metafields.specs.usb_charge != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> USB Charging: </span>
                           <span class="specs-sheet-value"> {{ product.metafields.specs.usb_charge }} </span>
                         </div>
                       {% endif %}
-                      {% if product.metafields.specs.wheel_diameter != nil %}
+                      {% if product.metafields.specs.waterproof_rating != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> IP Rating: </span>
                           <span class="specs-sheet-value"> {{ product.metafields.specs.waterproof_rating }} </span>
