--- a/sections/specification-section.liquid
+++ b/sections/specification-section.liquid
@@ -184,19 +184,19 @@
                       {% if product.metafields.specs.rgb != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> RGB: </span>
-                          <span class="specs-sheet-value"> {{ product.metafields.specs.rgb }} </span>
+                          <span class="specs-sheet-value"> {% if product.metafields.specs.rgb == true %} Yes{% else %} No{%- endif -%}{{ product.metafields.specs.rgb }} </span>
                         </div>
                       {% endif %}
                       {% if product.metafields.specs.bt_speakers != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> Bluetooth Speakers: </span>
-                          <span class="specs-sheet-value"> {{ product.metafields.specs.bt_speakers }} </span>
+                          <span class="specs-sheet-value"> {% if product.metafields.specs.bt_speakers == true %} Yes{% else %} No{%- endif -%}</span>
                         </div>
                       {% endif %}
-                      {% if product.metafields.specs.usb_charge != nil %}
+                      {% if product.metafields.specs.phone_charging_via_usb != nil %}
                         <div class="key_value_pair">
                           <span class="specs-sheet-keyname"> USB Charging: </span>
-                          <span class="specs-sheet-value"> {{ product.metafields.specs.usb_charge }} </span>
+                          <span class="specs-sheet-value"> {% if product.metafields.specs.phone_charging_via_usb == true %} Yes{% else %} No{%- endif -%}</span>
                         </div>
                       {% endif %}
                       {% if product.metafields.specs.waterproof_rating != nil %}
