--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -326,7 +326,11 @@
                   {{ type | payment_type_svg_tag: class: 'icon icon--full-color' }}
                 </li>
                 <li class="list-payment__item">
-                  {{ 'Klarna_Payment_Badge_XS.svg' | asset_url | img_tag }}
+                   <img 
+                    src="{{ 'Klarna_Payment_Badge_XS.svg' | asset_url }}"
+                    alt="{{ "klarna payment badge" }}"
+                    loading="lazy"
+                    class="icon icon--full-color" width="40" height="24"/>
                 </li>
               {%- endfor -%}
             </ul>
